testsuite/tests/generic_interfaces/non_node_implements/test.out
== foo.lkt ==
foo.lkt:11:1: error: FooStruct: Interface should always be implemented by a node
11 | struct FooStruct implements Interface {
   | ^


lkt_compile: Done
